# PodMind

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.claude/: settings.json
.claude/agents/: card-writer-agent.md  extraction-agent.md  ingest-agent.md  linker-agent.md  summarizer-agent.md  synthesis-agent.md  tagging-agent.md
.claude/commands/: digest.md  explore.md  ingest.md
.claude/hooks/: log-extraction.sh  on-stop.sh  validate-card.sh
.claude/rules/: extraction-fidelity.md  no-hallucination.md  tagging-consistency.md
.claude/skills/cross-referencing-episodes/: SKILL.md
.claude/skills/extracting-concepts/: SKILL.md  examples.md
.claude/skills/selecting-quotes/: SKILL.md  examples.md
scripts/: card_validator.py  dedup_checker.py  fetch_transcript.py  graph_analyzer.py  graph_linker.py  init_kb.py  rss_parser.py  similarity_scorer.py  state_utils.py  transcript_cleaner.py  weekly_digest.py
