[project]
authors = [{name = "alperkaan01"}]
name = "PodMind"
requires-python = ">= 3.11"
version = "0.1.0"
dependencies = [ "networkx>=3.6.1,<4", "plotly>=6.6.0,<7", "numpy>=2.4.2,<3"]

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["osx-arm64"]

[tool.pixi.pypi-dependencies]
podmind = { path = ".", editable = true }

[tool.pixi.tasks]

[tool.pixi.dependencies]
python = ">=3.14.3,<3.15"
youtube-transcript-api = "*"
git-filter-repo = ">=2.47.0,<3"
